--- a/MVCApplication1/Views/Employee/Edit.cshtml
+++ b/MVCApplication1/Views/Employee/Edit.cshtml
@@ -2,28 +2,28 @@
 @{
 }
 
+
 <div class="row">
     <div class="col-6 offset-3">
-        <form asp-action="Create" asp-controller="Employee" method="post">
+        <form asp-action="Edit" asp-controller="Employee" method="post">
+            <div class="form-group">
+                <input type="hidden" asp-for="Id" class="form-control"/>
+            </div>
             <div class="form-group">
                 <label asp-for="Name"></label>
                 <input asp-for="Name" class="form-control"/>
-                <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Age"></label>
                 <input asp-for="Age" class="form-control"/>
-                <span asp-validation-for="Age" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Salary"></label>
                 <input asp-for="Salary" class="form-control"/>
-                <span asp-validation-for="Salary" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Phone"></label>
                 <input asp-for="Phone" class="form-control"/>
-                <span asp-validation-for="Phone" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <button type="submit">Submit</button>
@@ -31,3 +31,4 @@
         </form>
     </div>
 </div>
+
