--- a/MVCApplication1/Views/Employee/Index.cshtml
+++ b/MVCApplication1/Views/Employee/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@model IEnumerable<MVCApplication1.Models.Employee>
 @{
 }
+<a asp-action="Create" asp-controller="Employee" class="btn"> Create </a><br />
 
-<a asp-action="Create" asp-controller="Employee" class="btn-outline-danger"> Create </a>
 <table class="table table-bordered">
     <thead>
         <tr>
@@ -11,6 +11,7 @@
             <th>Age</th>
             <th>Salary</th>
             <th>Phone</th>
+            <th>Action</th>
         </tr>
     </thead>
     @foreach(var emp in Model)
@@ -21,6 +22,13 @@
             <td>@emp.Age</td>
             <td>@emp.Salary</td>
             <td>@emp.Phone</td>
+            <td>
+                <div></div>
+            <a asp-action="Edit" asp-controller="Employee" asp-route-Id="@emp.Id" class="btn">Edit</a>
+            <a asp-action="Delete" asp-controller="Employee" asp-route-Id="@emp.Id" class="btn" id="deletebtn">Delete</a>
+            </td>
+            
+
         </tr>
     }
 </table>
